Replace byte[] from interface by ByteBuffers
byte[] are mutable which can be the cause of multiple vulnerabilities defined in the book http://cryptobook.us.

Also provides a nice interface to interact with other libraries as protobuf.